# Lock-Free-Concurrency-in-Rust-Analysis-of-Rust-for-Lock-Free-Programming

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  flake.nix
benchmark-results/: arc_energy_1_1.txt  arc_energy_2_1.txt  arc_memusage_1_1.txt  arc_memusage_2_1.txt  arc_pairwise.json  arc_pairwise_congestion.json  arc_pc_1_1.json  arc_pc_1_2.json  arc_pc_2_1.json  arc_pc_congestion_1_1.json  arc_pc_congestion_2_1.json  arc_perf_mem_1_1.txt  arc_perf_mem_2_1.txt  energy_c_1_1.txt  energy_c_2_1.txt  energy_rust_1_1.txt  energy_rust_2_1.txt  epoch_energy_1_1.txt  epoch_energy_2_1.txt  epoch_memusage_1_1.txt  epoch_memusage_2_1.txt  epoch_pairwise.json  epoch_pairwise_congestion.json  epoch_pc_1_1.json  epoch_pc_1_2.json  epoch_pc_2_1.json  epoch_pc_congestion_1_1.json  epoch_pc_congestion_2_1.json  epoch_perf_mem_1_1.txt  epoch_perf_mem_2_1.txt  leak_energy_1_1.txt  leak_energy_2_1.txt  leak_memusage_1_1.txt  leak_memusage_2_1.txt  leak_pairwise.json  leak_pairwise_congestion.json  leak_pc_1_1.json  leak_pc_1_2.json  leak_pc_2_1.json  leak_pc_congestion_1_1.json  (+46 more)
benchmark-results jemalloc/: arc_energy_2_1.txt  arc_pc_2_1.json  arc_pc_congestion_1_1.json  arc_pc_congestion_2_1.json  arc_perf_mem_1_1.txt  arc_valgrind_1_1.txt  energy_c_1_1.txt  energy_c_2_1.txt  energy_rust_1_1.txt  lprq_c_pairwise.json  lprq_c_pc_1_1.json  lprq_c_pc_2_1.json  lprq_c_pc_congestion_1_1.json  lprq_c_pc_congestion_2_1.json  lprq_rust_pairwise.json  lprq_rust_pairwise_congestion.json  lprq_rust_pc_1_1.json  lprq_rust_pc_2_1.json  lprq_rust_pc_congestion_2_1.json  msq_c.json  msq_c_pairwise_congestion.json  msq_rust.json  ratio_2_1_normalized.csv  valgrind_rust_2_1.1
c++-reference/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  benchmarks.sh  deduce_nproc.py  ring-size-benchmarks.sh  run.sh
c++-reference/include/: BenchmarkQ.hpp  CCQueue.hpp  FAAArrayQueue.hpp  FakeLCRQueue.hpp  Forked.hpp  LSCQueue.hpp  LinkedRingQueue.hpp  MetaprogrammingUtils.hpp  ModLCRQueue.hpp
c++-reference/postprocess/: draw.py  draw_compare.py  draw_main.py  postprocess.py  pp_helpers.py  requirements.txt
c++-reference/src/: Forked.cpp  lprq_mpmc.cpp  lprq_pairwise.cpp  pairs-benchmark.cpp  pc-benchmark.cpp  test.cpp
c-reference/: Makefile  align.h  benchmark.h  delay.h  hyperfine_harness.c  pairwise.c
hyperfine_scripts/: add_params.py  merge_ratios.py  plotter.py  setup_temp_dir.sh
rust-queues/: Cargo.toml  Makefile-dev.toml  Makefile.toml  build.toml
rust-queues/haphazard/: README.md
rust-queues/haphazard/src/: lib.rs
rust-queues/makefiles/: arc_plots.toml  benchmarks.toml  congestion_benchmarks.sh  env.toml  lprq_arc_benchmarks.toml  lprq_benchmarks.toml  lprq_epoch_benchmarks.toml  lprq_leak_benchmarks.toml  lprq_plots.toml  msq_benchmarks.toml  msq_plots.toml  plots.toml  ratio_benchmarks.sh  utils.toml
rust-queues/src/: benchmark_utils.rs  core_utils.rs  lib.rs  mpmc_benchmark.rs  pairwise_benchmark.rs  shared_queue.rs  umpmc_benchmark.rs
rust-queues/src/lcrq/: crq.rs  lprq.rs  mod.rs
rust-queues/src/lprq/: lprq.rs  mod.rs  prq.rs
rust-queues/src/lprq/arc_lprq/: lprq.rs  mod.rs  prq.rs
rust-queues/src/lprq/epoch_lprq/: lprq.rs  prq.rs
rust-queues/src/lprq/leak_lprq/: lprq.rs  prq.rs
rust-queues/src/ms_queue/: mod.rs  msq_hazp.rs
rust-queues/src/old_code/: atomic_tagged.rs
(+48 files in other folders)
