[package]
name = "rust-queues"
version = "0.1.0"
edition = "2021"

[dependencies]
haphazard = "0.1.8"
rand = "0.8"

[[bin]]
name = "msq_benchmark"
path = "src/bin/msq_benchmark.rs"
[[bin]]
name = "lprq_pairwise"
path = "src/bin/lprq_pairwise.rs"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"