[package]
name = "rust-queues"
version = "0.1.0"
edition = "2021"

[dependencies]
core_affinity = "0.8.1"
crossbeam-utils = "0.8.19"
crossbeam-epoch = "0.9.18"
#haphazard = "0.1.8"
haphazard = {path = "haphazard/"}
rand = "0.8"
#tikv-jemallocator = "0.5"
aarc = "0.2.1"

[[bin]]
name = "msq_pairwise"
path = "src/bin/msq_pairwise.rs"
[[bin]]
name = "lprq_pairwise"
path = "src/bin/lprq_pairwise.rs"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
